--- a/views/partials/call/call-block.handlebars
+++ b/views/partials/call/call-block.handlebars
@@ -1,5 +1,4 @@
-<div class="modal call_modal fade bd-example-modal-sm" id="exampleModalCenter" tabindex="-1" role="dialog"
-    aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal call_modal fade bd-example-modal-sm">
     <div class="modal-dialog modal-dialog-centered modal-sm" role="document">
         <div class="modal-content call-modal">
             <div class="modal-header">
