--- a/views/tickets.handlebars
+++ b/views/tickets.handlebars
@@ -46,16 +46,20 @@
                     {{!-- bigTickets --}}
                     <div class="col-md-8">
                         <div class="card big_ticket">
-                            <h3 style="padding:1.25rem">
-                                <div class="float-right"></div>
-                            </h3>
+
+                            <h5 style="padding:1.25rem">
+                                <div class="float-right ticketDate"></div>
+                            </h5>
                             <div class="card-body">
+                                <a href="#" class="activate">
+                                    <div class="avatar" style="background-color: rgb(220, 42, 42);"></div>
+                                </a>
                                 {{!-- Customer first name & last name --}}
-                                <h5></h5>
+                                <h2 style="display:inline-block"></h2>
                                 {{!-- ticket title --}}
-                                <h3></h3>
+                                <h4></h4>
                                 {{!-- ticket text --}}
-                                <p></p>
+                                <p style="color: #534366;font-weight: bold;"></p>
                                 <button class="btn btn-outline-info" id="reply" style="float:right"
                                     data-status="off">reply</button>
                                 <br>
