changed the conctcts page so that each user would have a dropdown option to call the costomer from that page as well as changed some styling

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,6 +26,10 @@
     <script src="/assets/js/crm.js"></script>
     <title>Impact X</title>
     <link rel="icon" href="/assets/images/LogoMakr_0aN6DX.png">
+
+    <script type="text/javascript" src="//media.twiliocdn.com/sdk/js/client/v1.7/twilio.min.js"></script>
+    <script src="/assets/js/voice.js"></script>
+    <script src="/assets/js/contacts.js"></script>
 </head>
 
 <body>
