--- a/views/partials/call/call-block.handlebars
+++ b/views/partials/call/call-block.handlebars
@@ -11,13 +11,13 @@
             <div class="modal-body text-center">
 
                 <h3 class="modalAv avatar">CD</h3>
-                <h3>Cathy Dates</h3>
+                <h3 id="customerName">Cathy Dates</h3>
 
-                <p class="text-lighjt">cathydates@gmail.com</p>
+                <p class="text-lighjt" id="customerEmail"></p>
                 <p id="logMsg"></p>
                 <div class="mb-2">
                     <button type="button" id="call" class="btn btn-outline-light mb-3">
-                        Call 5045154776
+                        <i class="fas fa-phone"></i>
                     </button>
                     <button type="button" id="hangup" class="btn btn-danger" data-dismiss="modal" aria-label="Close"
                         style="display: none;">
