just move the orientation of the icon on buttons on the contact page and changed message to note on notes modal

--- a/views/partials/note/notes-block.handlebars
+++ b/views/partials/note/notes-block.handlebars
@@ -12,14 +12,13 @@
                 <form>
 
                     <div class="form-group">
-                        <label for="message-text" class="col-form-label">Message:</label>
+                        <label for="message-text" class="col-form-label">Note:</label>
                         <textarea class="form-control" id="message-text"></textarea>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Send message</button>
+                <button type="button" class="btn btn-primary">Add Note</button>
             </div>
         </div>
     </div>
