fixed big ticket container

--- a/views/partials/AddComment/add-comment.handlebars
+++ b/views/partials/AddComment/add-comment.handlebars
@@ -7,15 +7,16 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <hr>
+            <p style="color: #7a6eb8;font-weight: bold">Recepient: <span id="recepient"></span> </p>
             <div class="modal-body">
                 <div class="row">
                     <div class="col">
                         <div class="form-group" id="ticketTextArea">
-                            <textarea class="form-control" style="min-height: 113px;"></textarea>
+                            <textarea class="form-control" ticketid="" style="min-height: 113px;"></textarea>
                             <br>
-                            <button class="btn btn-info" style="float:right; background: #7a6eb8"><i
+                            <button class="btn btn-info" id="PostComment" style="float:right; background: #7a6eb8"><i
                                     class="far fa-plus-square"></i>Post</button>
+                            <p id="commMSG"></p>
                         </div>
                     </div>
 
