--- a/views/tickets.handlebars
+++ b/views/tickets.handlebars
@@ -44,8 +44,8 @@
 
                     </div>
                     {{!-- bigTickets --}}
-                    <div class="col-md-8 big_ticket_sec" style="position: relative;">
-                        <div class="card big_ticket" style="position: absolute;">
+                    <div class="col-md-8 big_ticket_sec">
+                        <div class="card big_ticket" id="">
 
                             <h5 style="padding:1.25rem">
                                 <div class="float-right ticketDate"></div>
@@ -61,16 +61,8 @@
                                 {{!-- ticket text --}}
                                 <p style="color: #534366;font-weight: bold;"></p>
                                 <button class="btn btn-outline-info" id="reply" style="float:right"
-                                    data-status="off">reply</button>
-                                <br>
-                                <br>
-                                <br>
-                                <div class="form-group" id="ticketTextArea" style="display:none">
-                                    <textarea class="form-control" style="min-height: 113px;"></textarea>
-                                    <br>
-                                    <button class="btn btn-info" style="float:right"><i
-                                            class="far fa-plus-square"></i>Post</button>
-                                </div>
+                                    ticketid="100">reply</button>
+
 
 
                             </div>
