implement create ticket

--- a/views/partials/createTicket/create-block.handlebars
+++ b/views/partials/createTicket/create-block.handlebars
@@ -1,12 +1,12 @@
-<div class="modal fade bd-example-modal-lg" id="exampleModal" tabindex="-1" role="dialog"
-    aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade Ticket_form" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content create-modal">
             <div class="modal-header text-dark">
                 <h1 class="modal-title display-4" id="exampleModalLabel" style="color: #7a6eb8;">
                     <u style="font-weight:900">New
                         Ticket</u> </h1>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close close_ticket" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -15,7 +15,7 @@
                 <form>
                     <div class="form-group">
                         <label for="recipient-name" class="col-form-label text-dark">Customer Email:</label>
-                        <input type="text" class="form-control" id="recipient-name">
+                        <input type="email" class="form-control" id="recipient-name">
                     </div>
                     <div class="form-group">
                         <label for="ticket-title" class="col-form-label text-dark">Ticket Title:</label>
@@ -23,13 +23,14 @@
                     </div>
                     <div class="form-group">
                         <label for="ticket-text" class="col-form-label text-dark">Ticket Body:</label>
-                        <textarea class="form-control" rows="7"></textarea>
+                        <textarea class="form-control" rows="7" id="ticket-text"></textarea>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-outline-dark">Send Ticket</button>
+                <button type="button" class="btn btn-outline-danger close_ticket" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-outline-dark" id="NewTicket">Send Ticket</button>
+                <p id="ticketmsg"></p>
             </div>
         </div>
     </div>
