--- a/views/tickets.handlebars
+++ b/views/tickets.handlebars
@@ -31,7 +31,7 @@
             </li>
 
         </ul>
-        <button class="btn btn-info" data-toggle="modal" data-target=".bd-example-modal-lg"><i
+        <button class="btn btn-info" id="create_ticket" data-toggle="modal" data-target=".bd-example-modal-lg"><i
                 class="far fa-plus-square"></i> Create Ticket</button>
         <div class="tab-content">
             <div class="tab-pane active" id="allTickets" role="tabpanel" aria-labelledby="allTickets-tab">
