--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,11 +6,18 @@
     <div class="content" id="home">
 
 
-        <h1 class="display-5"> Welcome to Dashboard</h1>
+        {{!-- <h1 class="display-5"> Welcome to Dashboard</h1> --}}
 
         <div class="line"></div>
 
-
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="display-4"> Welcome back, </h1>
+                <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.
+                </p>
+                <a class="btn btn-primary btn-lg" href="#" role="button" id="tester">Learn more</a>
+            </div>
+        </div>
         <div class="container">
 
 
@@ -291,7 +298,7 @@
         font-weight: 700;
     }
 </style>
-
+<script src="/assets/js/dash.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/moment@2.24.0/moment.min.js"></script>
 <script>
 
