--- a/views/tickets.handlebars
+++ b/views/tickets.handlebars
@@ -10,20 +10,14 @@
                     aria-controls="allTickets" aria-selected="true">All Tickets</a>
             </li>
             <li class="nav-item" id="openTic">
-                <a class="nav-link" id="openTickets-tab " data-toggle="tab" href="#openTickets" role="tab"
+                <a class="nav-link" id="openTickets-tab" data-toggle="tab" href="#allTickets" role="tab"
                     aria-controls="openTickets" aria-selected="false">Open Tickets</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="closedTickets-tab" data-toggle="tab" href="#closedTickets" role="tab"
+                <a class="nav-link" id="closedTickets-tab" data-toggle="tab" href="#allTickets" role="tab"
                     aria-controls="closedTickets" aria-selected="false">Closed Tickets</a>
             </li>
             <li class="nav-item ">
-                {{!-- <div class="navbar navbar-light bg-light">
-                    <form class="form-inline">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-                    </form>
-                </div> --}}
                 <form class="form-inline ml-3">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
@@ -60,8 +54,11 @@
                                 <h4></h4>
                                 {{!-- ticket text --}}
                                 <p style="color: #534366;font-weight: bold;"></p>
-                                <button class="btn btn-outline-info" id="reply" style="float:right"
-                                    ticketid="100">reply</button>
+                                <button class="btn btn-outline-info" id="reply" style="float:right" ticketid="100"
+                                    disabled="true">reply</button>
+                                <button class="btn btn-outline-danger mr-2" id="close_ticket" style="float:right">Close
+                                    Ticket</button>
+                                <span id="ticket_closeMsg" class="float-right mr-2"></span>
 
 
 
