Did a lot of trouble shooting

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -22,7 +22,7 @@ a:focus {
   width: 100%;
   height: 1px;
   border-bottom: 1px dashed #ddd;
-  margin: 40px 0;
+  margin: 20px 0;
 }
 
 i,
@@ -69,8 +69,7 @@ span {
   display: block;
 } */
 
-#sidebar.active #jobTitle,
-#sidebar.active h3 {
+#sidebar.active #jobTitle {
   text-transform: uppercase;
 }
 
@@ -112,7 +111,8 @@ span {
 } */
 
 #sidebar .sidebar-header {
-  padding: 40%;
+  padding-top: 40%;
+  padding-bottom: 40%;
   background: #5b528a;
   margin-bottom: 3%;
 }
@@ -177,6 +177,15 @@ span {
   font-size: large;
 }
 
+#sidebar .media {
+  margin-top: 30%;
+  margin-bottom: 20%;
+}
+
+#sidebar.active .media {
+  margin-top: 4%;
+  margin-bottom: 2%;
+}
 /* ---------------------------------------------------
     LOGIN & ADMIN STYLE
 ----------------------------------------------------- */
@@ -296,39 +305,10 @@ label:focus input::placeholder {
   display: block;
 }
 
-/* #checkBox {
-  top: 5rem;
-  left: 2rem;
-  position: relative;
-} */
-/* 
-#ready {
-  padding: 20%;
-  background-color: red;
-  border-radius: 50%;
-  width: fit-content;
-  text-transform: uppercase;
-  font-size: 1.8em;
-}  */
-
-/* #modalDot {
-  padding: 6%;
-  justify-content: center;
-  background-color: red;
-  border-radius: 50%;
-  margin-right: 40%;
-  margin-left: 40%;
-} */
-
 .call-modal {
   background-color: #7a6eb8;
   border: none;
 }
-/* 
-.create-modal {
-  border: none;
-  background-color: #d1d1d1;
-} */
 
 .modal-header,
 .modal-footer {
@@ -351,6 +331,7 @@ label:focus input::placeholder {
   font-weight: bold;
   font-size: 16px;
   margin-right: 4%;
+  text-transform: uppercase;
 }
 
 .ticketAv {
@@ -418,16 +399,34 @@ label:focus input::placeholder {
   /* height: 125px; */
 }
 
-#sidebar .media {
-  margin-top: 30%;
-  margin-bottom: 20%;
-}
-
-#sidebar.active .media {
-  margin-top: 4%;
-  margin-bottom: 2%;
-}
-
 .table td {
   vertical-align: middle;
+}
+
+.userLastName::first-letter,
+.userFirstName::first-letter {
+  text-transform: uppercase;
+}
+
+#welcomeBack {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
+  background-color: #7a6eb8;
+}
+
+.clock {
+  background: #43ccc9;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  border-radius: 2%;
+  font-size: xx-large;
+}
+
+.list-group-item {
+  border: none;
+}
+
+#day {
+  font-weight: 700;
 }
