--- a/views/partials/call/call-block.handlebars
+++ b/views/partials/call/call-block.handlebars
@@ -11,7 +11,8 @@
             <div class="modal-body text-center">
 
                 <h3 class="modalAv avatar">CD</h3>
-                <h3 id="customerName">Cathy Dates</h3>
+                <h3><span class="userFirstName">Niasha</span>
+                    <span class="userLastName">grant</span></h3>
 
                 <p class="text-lighjt" id="customerEmail"></p>
                 <p id="logMsg"></p>
