--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -25,9 +25,11 @@
 
 
 
-        <h3>{{currentUser}}</h3>
+        <h3> <span class="userFirstName">Niasha</span>
+            <span class="userLastName">grant</span></h3>
         <div id="jobTitle">Customer Support Specialist</div>
-        <strong>{{currentUser.[0]}} </strong>
+        <strong id="initals">
+        </strong>
 
     </div>
 
